--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.42.0",
     "bcrypt-nodejs": "^0.0.3",
     "clarifai": "^2.9.1",
     "cookie-parser": "^1.4.6",
